--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-# Connection url for the database "govi_mithuru"
+# Connection url for the database "firebase_test"
 spring.main.banner-mode=off
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&useUnicode=yes&characterEncoding=utf-8
 spring.datasource.dbcp2.validation-query=SELECT 1
